# bilboat

./: .gitignore  Cargo.toml  README.md
src/: embed.rs  encryption.rs  extract.rs  lib.rs  main.rs  wav_buffer.rs
