[package]
name = "bilboat"
version = "0.1.0"
edition = "2021"

[dependencies]
hound = "3.5.1"
rand = "0.9.0"
sha2 = "0.10.8"
base64 = {version = "0.22.1", optional = true }
generic-array = { version = "1.2.0", optional = true }
aes-siv = { version = "0.7", optional = true }

# Add an encryption feature to enable AES-SIV support
[features]
default = ["encryption"]
encryption = ["aes-siv", "generic-array", "base64"]  # AES-SIV encryption will be included only when this feature is enabled